--- a/src/MicroMikeMinimal/settings.sass
+++ b/src/MicroMikeMinimal/settings.sass
@@ -26,3 +26,6 @@ body:not(.is-mobile).largeSettingsButtons .modal.mod-settings .clickable-icon
 	background-color: var(--level1_a)
 	min-height: 40px
 	width: 40px
+
+.mod-dim .modal-bg
+	opacity: 0 !important
